--- a/ASSETS/CSS/stylesheet.css
+++ b/ASSETS/CSS/stylesheet.css
@@ -15,7 +15,8 @@ body {
   color: #000;
 }
 
-button {
+.button {
+  margin: 5px;
   width: 100px;
   height: 50px;
   background-color: blue;
@@ -23,9 +24,12 @@ button {
   border: solid 2px #000;
   border-radius: 2%;
   margin-bottom: 4px;
-
 }
-button:hover {
+.button:hover {
   background-color: lightgreen;
   cursor: pointer;
+}
+@media screen and (max-width: 480px) {
+  .button {
+    margin-left: 0;
 }
